# TuringKEP

./: .gitignore  README.md  main.py  pyproject.toml  turing_kg.html  turing_kg_focus.html
.claude/skills/grill-me/: SKILL.md
.trellis/: .template-hashes.json
.trellis/spec/guides/: index.md
.trellis/spec/pipeline/: index.md  stage-design.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/04-30-skeleton-refactor/: implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-04/00-bootstrap-guidelines/: task.json
.trellis/workspace/answerend42/: index.md  journal-1.md
derived/course_markdown/: 00_课程概述.md  01_概述.md  02_知识表示.md  03_知识体系构建和知识融合.md  04_实体识别和扩展.md  05_实体消歧.md  06_关系抽取.md  08_存储与检索.md  09_知识推理.md  README.md
docs/: frontend-redesign-brief.md
evaluation/: crf_metrics.json  ner_comparison.json  pipeline_metrics.json  suspicious_triples.json
experiments/: iteration-journal.md
schema/: turing_domain.json
snapshots/task1-ch2-schema/: snapshot.json
snapshots/task2-ch4-ner/: snapshot.json
snapshots/task3-open-discovery/: snapshot.json
snapshots/task4-relation/: snapshot.json
snapshots/task5-reasoning/: snapshot.json
snapshots/task6-disambiguation/: snapshot.json
turingkep/: __init__.py  cli.py  disambiguation.py  entity_discovery.py  evaluation.py  graph.py  graph_v2.py  hmm_ner.py  ingestion.py  legacy_wikidata.py  linking.py  ner.py  ner_comparison.py  open_entity.py  paths.py  pipeline.py  preprocess.py  reasoning.py  records.py  relation.py  relation_methods.py  schema.py  storage.py  utils.py
(+18 files in other folders)
